# fanyi

./: .gitignore  README.md  clean.sh  pyproject.toml
docs/: info.md  misc.md
dugong/: cli.py  evaluation.py  handler.py  imports.py  inference.py  loader.py  misc.py  paths.py  preprocess.py  t5.py  t5_cli.py  train.py  translate.py  trcli.py  utils.py  validation.py
dugong/examples/: corpus_test.json  corpus_train.json  test_small.json  train_small.json
fanyi/: cli.py  data.py  errors.py  file_manager.py  helsinki_models.py  imports.py  loader.py  paths.py  test.txt  train.py  utils.py  validation.py
tests/: populate_files.py  run_tests.py  test_helsinki.py  test_imports.py  test_utils.py
tests/custom_dataset/chinese/raws/: MHOH-RAWS-001.txt  MHOH-RAWS-002.txt  MHOH-RAWS-003.txt  MHOH-RAWS-004.txt  MHOH-RAWS-005.txt  MHOH-RAWS-006.txt  MHOH-RAWS-007.txt  MHOH-RAWS-008.txt  MHOH-RAWS-009.txt  MHOH-RAWS-010.txt
tests/custom_dataset/chinese/translations/: MHOH-TRANSLATIONS-001.txt  MHOH-TRANSLATIONS-002.txt  MHOH-TRANSLATIONS-003.txt  MHOH-TRANSLATIONS-004.txt  MHOH-TRANSLATIONS-005.txt  MHOH-TRANSLATIONS-006.txt  MHOH-TRANSLATIONS-007.txt  MHOH-TRANSLATIONS-008.txt  MHOH-TRANSLATIONS-009.txt  MHOH-TRANSLATIONS-010.txt
tests/custom_dataset/korean/raws/: ARTOC-RAWS-001.txt  ARTOC-RAWS-002.txt  ARTOC-RAWS-003.txt  ARTOC-RAWS-004.txt  ARTOC-RAWS-005.txt  ARTOC-RAWS-006.txt  ARTOC-RAWS-007.txt  ARTOC-RAWS-008.txt  ARTOC-RAWS-009.txt  ARTOC-RAWS-010.txt
tests/custom_dataset/korean/translations/: ARTOC-TRANSLATIONS-001.txt  ARTOC-TRANSLATIONS-002.txt  ARTOC-TRANSLATIONS-003.txt  ARTOC-TRANSLATIONS-004.txt  ARTOC-TRANSLATIONS-005.txt  ARTOC-TRANSLATIONS-006.txt  ARTOC-TRANSLATIONS-007.txt  ARTOC-TRANSLATIONS-008.txt  ARTOC-TRANSLATIONS-009.txt  ARTOC-TRANSLATIONS-010.txt
tests/test_files/translations/: ARTOC-TRANSLATIONS-001.txt
