[tool.poetry]
name = "fanyi"
version = "0.1.0"
description = "Improve NLP-based machine-generated novel translations through the application of transfer learning."
authors = ["janusmiracle <janusmiracle@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python="3.11.1"
torch = "2.2.1"
torchvision = "0.17.1"
tensorflow = "^2.15.0"
flax = "^0.8.1"
sacremoses = "^0.1.1"
transformers = "^4.38.2"
sentencepiece = "^0.2.0"
natsort = "^8.4.0"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Ruff stuff
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
quote-style = "single"
