[tool.poetry]
name = "dugong"
version = "0.1.0"
description = "Improve machine-generated novel translations through the application of transfer learning."
authors = ["yaeso"]
readme = "README.md"

[tool.poetry.dependencies]
python="3.11.1"
torch = "2.2.1"
torchvision = "0.17.1"
tensorflow = "^2.15.0"
flax = "^0.8.1"
sacremoses = "^0.1.1"
transformers = "^4.38.2"
sentencepiece = "^0.2.0"
natsort = "^8.4.0"
nltk = "^3.8.1"
accelerate = "^0.28.0"
evaluate = "^0.4.1"
sacrebleu = "^2.4.2"
psutil = "^5.9.8"
tf-keras = "^2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
# Test using cli
train = "dugong.cli:main"
translate = "dugong.trcli:main"

# Ruff stuff
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

